C<ENABLE_CATEGORY_BROWSER> F<bricolage.conf> directive is true, the categories
are now displayed in alphabetical order by URI. [David]

=item *

The installer no longer requires that L<Term::ReadPassword> be installed from
the CPAN before it continues. It will use it if it finds it, but if not
substitutes a simple implementation that does the trick (Bug #136). [David]

=back

=head2 Bug Fixes

=over

=item *

L<Bric::Util::Burner>'s C<publish()> method no longer removes documents from
workflow after publishing them, as such is the responsbility of the code that
calls publish. The publish callback already did, and now so does the
L<Bric::SOAP::Workflow> C<publish()> method. Thanks to David Beaudet for the
report and Aaron Fuleki for the steps to replicate (Bug #98). [David]

=item *

Fixed a bug where contributor and category search results would be propagated
to the contributor and category editing screens with a story or media
document. Searches from within documents should cache their own results,
separate from the admin search interfaces. [David]

=item *

Contributors associated with a story or media document and categories
associated with a story document are no longer paginated. When there were more
contributors or categories than would fit on a paginated page, the pagination
didn't work and reording didn't work. So by disabling pagination in this case,
we get around that issue. Documents with that many categories or contributors
are rare, so the trade-off seems worthwhile. Thanks to Bret Dawson for the
report (Bug #121). [David]

=item *

When associating a contributor with a media document, don't prompt for role
selection if the contributor has only one role. This saves a page load for
each contributor association and brings media in line with how story
contributor association already works. [David]

=item *

Fixed the "Log In" button so that the word "In" is antialiased. [Waldo
Jaquith]

=item *
