@@ -79,14 +79,15 @@ $m->comp("/widgets/wrappers/sharky/table_top.mc",
 
 <div class="editmeta">
 <& '/widgets/select_object/select_object.mc',
-  object   => 'source',
-  name     => "$widget|source__id",
-  field    => 'source_name',
-  selected => $story->get_source__id,
-  indent   => 0,
-  useTable => 1,
-  disp     => "Source",
-  exclude => sub { !chk_authz($_[0], READ, 1) },
+  object     => 'source',
+  name       => "$widget|source__id",
+  field      => 'source_name',
+  sort_field => 'source_name',
+  selected   => $story->get_source__id,
+  indent     => 0,
+  useTable   => 1,
+  disp       => "Source",
+  exclude    => sub { !chk_authz($_[0], READ, 1) },
 &>
 <& '/widgets/profile/displayFormElement.mc',
    objref => $story,
